<resources>
    <string name="app_name">Upnext: TV Series Manager</string>
    <string name="show_poster">%1$s poster</string>
    <string name="show_backdrop_image">%1$s backdrop image</string>
    <string name="title_new_shows">New Shows</string>
    <string name="title_yesterday_shows">Aired Yesterday</string>
    <string name="title_today_shows">Airing Today</string>
    <string name="title_tomorrow_shows">Airing Tomorrow</string>
    <string name="title_explore">Explore</string>
    <string name="title_seasons">Seasons</string>
    <string name="title_season_episodes">Episodes</string>
    <string name="title_settings">Settings</string>
    <string name="title_recommendations">Recommendations</string>
    <string name="title_trakt_account">Trakt Account</string>
    <string name="title_favorites_list">Your Watchlist</string>
    <string name="watchlist_description">Shows you intend to watch. Tap to view, swipe to remove.\nNote: Trakt automatically removes items from your watchlist once you log an episode as watched.</string>
    <string name="title_loading">Loading</string>
    <string name="title_unknown">Title Unknown</string>
    <string name="action_navigate_up_description">Navigation arrow</string>
    <string name="desc_back_arrow">Back</string>
    <string name="nav_title_search">Search</string>
    <string name="nav_title_dashboard">Dashboard</string>
    <string name="nav_title_schedule">Schedule</string>
    <string name="nav_title_history">History</string>
    <string name="nav_title_watchlist">Watchlist</string>
    <string name="nav_title_library">Library</string>
    <string name="nav_title_explore">Explore</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_account">Account</string>
    <string name="empty_detail_screen_prompt">Select a show from the list to see its details.</string>
    <string name="show_detail_synopsis_heading">Synopsis</string>
    <string name="show_detail_next_episode_heading">Next Episode</string>
    <string name="show_detail_previous_episode_heading">Previous Episode</string>
    <string name="show_detail_episode_season_info">S%1$sE%2$s, %3$s</string>
    <string name="splash_screen_loading_text">Preparing the shows…</string>
    <string name="show_detail_add_to_watchlist_button">Add to watchlist</string>
    <string name="show_detail_remove_from_watchlist_button">Remove from watchlist</string>
    <string name="show_detail_remove_from_watchlist_button_description">Remove from watchlist button</string>
    <string name="show_detail_get_watched_progress">Your Watched Progress</string>
    <string name="show_detail_genres_heading">Genres</string>
    <string name="show_detail_air_days_heading">Airs on</string>
    <string name="btn_show_detail_seasons">Seasons</string>
    <string name="btn_mark_season_watched">Mark Season Watched</string>
    <string name="btn_mark_season_unwatched">Mark Season Unwatched</string>
    <string name="show_detail_episode_and_number">Episode %1$s</string>
    <string name="show_detail_season_and_number">Season %1$s</string>
    <string name="btn_show_detail_submit_rating">Submit Rating</string>
    <string name="btn_show_detail_add_to_favorites">Add to watchlist</string>
    <string name="btn_show_detail_remove_from_favorites">Remove from watchlist</string>
    <string name="show_detail_cast_list">Cast</string>
    <string name="show_detail_similar_shows_heading">Similar Shows</string>
    <string name="show_detail_rating_heading">Trakt Rating</string>
    <string name="show_detail_plays_heading">Trakt Plays</string>
    <string name="show_detail_watchers_heading">Trakt Watchers</string>
    <string name="show_detail_rating">%1$d/10</string>
    <string name="show_detail_rating_numerator">%1$s,0</string>
    <string name="show_detail_rating_votes">%1$s votes</string>
    <string name="show_detail_next_episode_airdate">Airing in %1$d %2$s</string>
    <string name="show_detail_previous_episode_airdate">Aired %1$d %2$s ago</string>
    <string name="show_detail_air_date_general">Aired on %1$s</string>
    <string name="show_detail_ratings_heading">Ratings (users on Trakt)</string>
    <string name="show_detail_rating_content_description">Rating Star</string>
    <string name="show_detail_connect_trakt_prompt">Go to the Account screen to connect your Trakt Account so you can add this show to your watchlist</string>
    <string name="cast_member_details_heading">Actor Details</string>
    <string name="cast_member_birthday">Born</string>
    <string name="cast_member_deathday">Died</string>
    <string name="cast_member_gender">Gender</string>
    <string name="character_details_heading">Character Details</string>
    <string name="cast_member_plays_character">Plays: %s</string>
    <string name="character_image_description">%s character image</string>
    <string name="cast_member_voice_actor">(Voice)</string>
    <string name="cast_member_plays_self">(Plays Self)</string>
    <string name="cast_member_profile_image_description">%s profile image</string>
    <string name="trakt_watched_overall_progress_percentage">%1$d%% watched</string>
    <string name="trakt_watched_progress_episodes_aired_heading">Episodes aired</string>
    <string name="trakt_watched_progress_episodes_watched_heading">Episodes you watched</string>
    <string name="trakt_watched_progress_season_percentage">%1$d%%</string>
    <string name="trakt_watched_progress_sheet_title">Your watched progress</string>
    <string name="trakt_watched_progress_sheet_title_with_show_name">Your \"%1$s\" watched progress</string>
    <string name="show_detail_season_count">%1$d Episodes</string>
    <string name="show_detail_season_premiere_date">Premiered: %1$s</string>
    <string name="show_detail_season_end_date">Ended: %1$s</string>
    <string name="show_detail_season_and_episode_number">Season %1$s Episode %2$s</string>
    <string name="show_detail_show_seasons_title">Seasons Summary</string>
    <string name="show_detail_show_season_episodes_title">Season episodes</string>
    <string name="show_detail_show_season_episodes_title_with_number">Season %1$s episodes</string>
    <string name="show_detail_show_season_episode_trakt_check_in">Trakt Check-in</string>
    <string name="show_detail_show_season_episode_check_in_dialog_title">Check-in to Season %1$d Episode %2$d on Trakt?</string>
    <string name="show_detail_show_season_episode_check_in_dialog_message">Checking in means you are currently watching this episode right now. Trakt will automatically set the episode to watched status once the duration of the episode has lapsed.</string>
    <string name="show_detail_show_season_episode_check_in_dialog_negative">No thanks</string>
    <string name="show_detail_show_season_episode_check_in_dialog_positive">Proceed</string>
    <string name="splash_screen_loading_text_tomorrow_schedule">Fetching tomorrow\'s schedule…</string>
    <string name="splash_screen_loading_text_today_schedule">Fetching today\'s schedule…</string>
    <string name="splash_screen_loading_text_yesterday_schedule">Fetching yesterday\'s schedule…</string>
    <string name="splash_screen_loading_text_recommended_shows">Fetching recommended shows…</string>
    <string name="search_input_hint">Search for a show...</string>
    <string name="search_title">Search</string>
    <string name="search_recent_searches">Recent Searches</string>
    <string name="search_clear_recent">Clear</string>
    <string name="search_empty_title">No results found</string>
    <string name="search_empty_message">We couldn\'t find any shows matching your search query. Try searching for a different term.</string>
    <string name="pref_first_time_launch">first_time_launch</string>
    <string name="tv_maze_creative_commons_attribution_text_single">Image licensed under CC BY-SA 4.0</string>
    <string name="tv_maze_creative_commons_attribution_text_multiple">All images licensed under CC BY-SA 4.0</string>
    <string name="trakt_logo_description">Trakt logo</string>
    <string name="trakt_connect_description">Trakt is a platform that does many things, but primarily keeps
        track of TV shows and movies you watch. It integrates with your media center or home theater PC
        to enable scrobbling, so everything is automatic. Some people like to check in from their phone,
        so Trakt enable\'s that too. \n\n If you would like to connect your Trakt account so you can manage your shows from the UpNext
        TV Series Manager app, click the connect button below. You will be redirected to the Trakt website where you will be required
        to authorize the UpNext app. You can revoke the access at any time from your Trakt account.</string>
    <string name="trakt_connect_description_source">[Source: https://trakt.tv/about]</string>
    <string name="connect_to_trakt_button">Connect Trakt account</string>
    <string name="trakt_connection_status_connected">Connection status: Connected</string>
    <string name="trakt_connection_status_disconnect">Logout</string>
    <string name="disconnect_from_trakt_dialog_title">Disconnect  Trakt account?</string>
    <string name="disconnect_from_trakt_dialog_message">Continue with disconnecting your Trakt account from
        Upnext: TV Series Manager? You will need to reconnect your Trakt account for the data to be synchronized again.</string>
    <string name="disconnect_from_trakt_dialog_confirm">Logout</string>
    <string name="disconnect_from_trakt_dialog_cancel">Cancel</string>
    <string name="favorite_title_and_release_year">%1$s (%2$s)</string>
    <string name="favorite_title_no_year">%1$s</string>
    <string name="trakt_account_favorites_empty">You currently have no shows in your watchlist. Search for a show and click \'Add to Watchlist\' so it can appear here.</string>
    <string name="trakt_connecting_text">Connecting to Trakt…</string>
    <string name="trakt_disconnecting_text">Disconnecting from Trakt…</string>
    <string name="trakt_loading_favorites">Loading your Trakt watchlist…</string>
    <string name="trakt_no_favorites_message">Watchlist Empty</string>
    <string name="trakt_no_favorites_description">Add shows to your watchlist on Trakt, and they\'ll appear here!</string>
    <string name="trakt_custom_list_default_description">Shows in this Trakt custom list.</string>
    <string name="library_connect_to_trakt_dialog_title">Heads up!</string>
    <string name="library_connect_to_trakt_dialog_message">You are about to be redirected to your browser and outside of the UpNext TV Series Manager
        app, where you will be taken to the Trakt website. From there, you will need to authorise UpNext TV Series Manager access to your Trakt account
    in order to make use of the Trakt functionality around the app. After you authorize, you will return to the Library screen</string>
    <string name="library_connect_to_trakt_dialog_negative">No thanks</string>
    <string name="library_connect_to_trakt_dialog_positive">Proceed</string>
    <string name="library_disconnect_from_trakt_dialog_title">Disconnecting Trakt Account</string>
    <string name="library_disconnect_from_trakt_dialog_negative">Cancel</string>
    <string name="trakt_button_text_not_connected">Connect Trakt account</string>
    <string name="watchlist_empty_state_text">Your Trakt watchlist is empty. Add shows to your watchlist in your Trakt account and they will appear here</string>
    <string name="empty_state_icon">Empty state icon</string>
    <string name="appearance_header">Appearance</string>
    <string name="sync_header">Sync</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>