<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.theupnextapp.ui.history.HistoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showProgress="@{viewModel.isLoadingHistory()}" />

        <ImageView
            android:id="@+id/history_header"
            style="@style/Upnext.Subtitle"
            android:layout_width="0dp"
            android:layout_height="@dimen/trakt_watchlist_header_height"
            android:layout_marginTop="?attr/actionBarSize"
            android:contentDescription="@string/trakt_logo_description"
            app:layout_constraintBottom_toTopOf="@id/history_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showHideView="@{viewModel.isAuthorizedOnTrakt() &amp;&amp; !viewModel.historyEmpty}"
            app:srcCompat="@drawable/ic_trakt_wide_red_white"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/trakt_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:contentDescription="@string/trakt_logo_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showHideView="@{!viewModel.isAuthorizedOnTrakt}"
            app:srcCompat="@drawable/ic_trakt_wide_red_white"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/connection_description"
            style="@style/Upnext.Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding_standard"
            android:text="@string/trakt_connect_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trakt_logo"
            app:showHideView="@{!viewModel.isAuthorizedOnTrakt}"
            tools:visibility="visible" />

        <Button
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:backgroundTint="@android:color/holo_red_dark"
            android:clickable="true"
            android:enabled="@{!viewModel.isAuthorizedOnTrakt}"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:onClick="@{() -> viewModel.onConnectClick()}"
            android:paddingStart="@dimen/padding_standard_double"
            android:paddingTop="@dimen/padding_standard"
            android:paddingEnd="@dimen/padding_standard_double"
            android:paddingBottom="@dimen/padding_standard"
            app:dynamicText="@{viewModel.isAuthorizedOnTrakt}"
            app:icon="@drawable/ic_cloud_done_white_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connection_description"
            app:showHideView="@{!viewModel.isAuthorizedOnTrakt}"
            tools:text="@string/trakt_button_text_not_connected"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_horizontal_half"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginEnd="@dimen/margin_horizontal_half"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_header"
            app:showHideView="@{viewModel.isAuthorizedOnTrakt() &amp;&amp; !viewModel.historyEmpty}"
            tools:listitem="@layout/trakt_history_item"
            tools:visibility="gone" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:showHideView="@{viewModel.historyEmpty &amp;&amp; viewModel.isAuthorizedOnTrakt()}"
            tools:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/empty_state_icon"
                app:srcCompat="@drawable/empty_state_box_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginEnd="@dimen/margin_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/watchlist_empty_state_text"
                android:textAppearance="@style/Upnext.Description.EmptyState" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/trakt_watchlist_header_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_vertical"
                android:contentDescription="@string/trakt_logo_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_trakt_wide_red_white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>